# oop_additional_tasks

./: README.md  pyproject.toml
lesson1/: albums.py  bottle.py  number.py  students.py
lesson2/: bankaccount.py  person.py  rectangle.py  user.py
lesson3/: counter.py  fraction.py  log.txt  logger.py  mylist.py  mylist2.py  point.py  timer.py
lesson4/: animal.py  car.py  employee.py  person.py  shape.py
lesson5/: bird.py  person.py
lessson6/: person.py  person2.py  student.py
